--- a/crates/saved-core-rs/Cargo.toml
+++ b/crates/saved-core-rs/Cargo.toml
@@ -48,6 +48,8 @@ prost = "0.12"
 prost-types = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bincode = "1.3"
+async-trait = "0.1"
 
 # Storage
 rusqlite = { version = "0.31", features = ["bundled"] }
