Remove all cloud backup mentions from code
- Removed enable_cloud_backup and disable_cloud_backup methods from AccountHandle
- Updated project descriptions to remove 'cloud-optional' references
- Updated README files to remove cloud backup integration mentions
- Kept key backup and export/import functionality (different from cloud backup)

The codebase is now focused purely on P2P functionality without cloud backup features.

--- a/crates/saved-core-rs/Cargo.toml
+++ b/crates/saved-core-rs/Cargo.toml
@@ -2,7 +2,7 @@
 name = "saved-core-rs"
 version = "0.1.0"
 edition = "2021"
-description = "Core library for SAVED - Personal Messages Sync (P2P-first, Cloud-optional)"
+description = "Core library for SAVED - Personal Messages Sync (P2P-first)"
 authors = ["SAVED Team"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/saved/saved-core-rs"
