Clean up CLI and reorganize project structure
- Remove massive QR code display from CLI link command
- Move relay-server to crates/saved-relay-server
- Rename crates to drop -rs ending (saved-core-rs -> saved-core, saved-cli-rs -> saved-cli)
- Update all Cargo.toml files and import statements
- Remove unused qrcode dependencies
- Update workspace configuration
- Clean up device linking output to show only JSON payload

All functionality preserved, CLI output is now much cleaner and more usable.

--- a/crates/saved-cli/Cargo.toml
+++ b/crates/saved-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "saved-cli-rs"
+name = "saved-cli"
 version = "0.1.0"
 edition = "2021"
 description = "Command-line interface for SAVED - Personal Messages Sync"
@@ -15,7 +15,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Core library
-saved-core-rs = { path = "../saved-core-rs" }
+saved-core = { path = "../saved-core" }
 
 # CLI framework
 clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
@@ -44,9 +44,7 @@ walkdir = "2.3"
 colored = "2.0"
 indicatif = "0.17"
 
-# QR code generation
-qrcode = "0.14"
-image = "0.24"
+# QR code generation removed - not used in CLI anymore
 
 # Table formatting
 comfy-table = "7.0"
