--- a/crates/saved-core/Cargo.toml
+++ b/crates/saved-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "saved-core-rs"
+name = "saved-core"
 version = "0.1.0"
 edition = "2021"
 description = "Core library for SAVED - Personal Messages Sync (P2P-first)"
@@ -67,8 +67,7 @@ base64 = "0.21"
 url = "2.5"
 pathdiff = "0.2"
 
-# QR code generation
-qrcode = "0.14"
+# QR code generation removed - not used in core library
 
 [dev-dependencies]
 tempfile = "3.0"
