--- a/crates/saved-core/Cargo.toml
+++ b/crates/saved-core/Cargo.toml
@@ -50,6 +50,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bincode = "1.3"
 async-trait = "0.1"
+tokio-util = "0.7"
 
 # Storage
 rusqlite = { version = "0.31", features = ["bundled"] }
