--- a/crates/savedctl/Cargo.toml
+++ b/crates/savedctl/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 colored = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
+hex = "0.4"
