Implement robust error recovery and handling system
- Created comprehensive ErrorRecoveryManager with retry logic and circuit breakers
- Added configurable retry policies for different operation types (network, storage, sync, chunk)
- Implemented circuit breaker pattern to prevent cascading failures
- Added exponential backoff with jitter for retry delays
- Integrated error recovery into NetworkManager and Storage trait implementations
- Added retry statistics and circuit breaker status monitoring
- Fixed compilation errors and borrowing issues in error recovery module
- All error recovery functionality compiles successfully

The error recovery system provides:
- Automatic retry with configurable attempts and delays
- Circuit breaker protection against repeated failures
- Comprehensive statistics and monitoring
- Graceful degradation under failure conditions

--- a/crates/saved-core/Cargo.toml
+++ b/crates/saved-core/Cargo.toml
@@ -67,6 +67,7 @@ hex = "0.4"
 base64 = "0.21"
 url = "2.5"
 pathdiff = "0.2"
+fastrand = "2.0"
 
 # QR code generation removed - not used in core library
 
